--- a/Slardarius/css/main.css
+++ b/Slardarius/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Welcome to Compass. In this file you should write your main styles. (or centralize your imports) Import this file using the following HTML or equivalent: <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video { margin: 0; padding: 0; border: 0; font: inherit; font-size: 100%; vertical-align: baseline; }
 
@@ -16,8 +17,12 @@ a img { border: none; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block; }
 
+/* ╨Ъ╨╜╨╛╨┐╨║╨╕ */
+/* ╨в╨╡╨║╤Б╤В */
+/* ╨Т╤Б╤В╨░╨▓╨║╨╕ */
 body { font-size: 16px; font-family: "RobotoRegular", sans-serif; line-height: 20px; }
 
+/* First page */
 .header { margin: 0 0 222px 0; background-image: url(../img/header.png); background-position: top center; background-size: cover; background-attachment: fixed; width: 100%; height: 85vh; }
 .header .menu { width: 100%; height: 142px; }
 .header .logo { font-size: 30px; padding: 26px 3px; font-family: "RobotoBold"; color: #026988; cursor: pointer; }
@@ -27,17 +32,18 @@ body { font-size: 16px; font-family: "RobotoRegular", sans-serif; line-height: 2
 .header nav ul li a { color: #111d2c; }
 .header nav ul li:hover { list-style-image: url(../img/point.png); }
 
-.why_me { font-family: "RobotoLight"; font-size: 50px; color: #029688; width: 100%; height: 101px; }
+.why_me { font-family: "RobotoLight"; font-size: 50px; color: #026988; width: 100%; height: 101px; }
 
-.ads { font-size: 25px; line-height: 37.5px; }
+.ads { font-size: 25px; line-height: 37.5px; color: #000; }
 
 .next { font-size: 25px; font-family: "RobotoLight"; color: #026988; height: 82px; width: 100%; }
-.next .buttons { width: 179px; height: 32px; border-radius: 5px; background-color: #2687a4; cursor: pointer; padding: 0px 50px; color: #fff; font-size: 20px; padding: 0px 45px; text-transform: uppercase; border-right: 16px solid #ff9000; -webkit-transition: all 0.25s linear; -moz-transition: all 0.25s linear; transition: all 0.25s linear; line-height: 34px; font-family: "RobotoBold"; }
-.next .buttons:hover { background-color: #ff9000; -webkit-transition: all 0.25s linear; -moz-transition: all 0.25s linear; transition: all 0.25s linear; }
+.next .buttons { margin-top: 30px; width: 179px; height: 32px; border-radius: 5px; cursor: pointer; background-color: #2687a4; cursor: pointer; padding: 0px 50px; color: #fff; font-size: 20px; padding: 0px 45px; text-transform: uppercase; border-right: 16px solid #ff9000; -webkit-transition: all 0.25s linear; -moz-transition: all 0.25s linear; transition: all 0.25s linear; line-height: 34px; font-family: "RobotoBold"; }
+.next .buttons:hover { background-color: #ff9000; border-right: 16px solid #2687a4; }
 
 .nout__item { margin: 66px 0 0 0; background-image: url(../img/nout.png); background-repeat: no-repeat; width: 100%; height: 100vh; position: absolute; }
 
-section { background-image: url(../img/second_section.png); background-repeat: no-repeat; background-position: top center; width: 100%; height: 100vh; }
+/* Second section */
+section { background-image: url(../img/second_section.png); background-repeat: no-repeat; background-position: top center; background-attachment: fixed; width: 100%; height: 100vh; }
 section .about_me { width: 100%; height: 725px; background-color: #b2eff8; margin-top: 123px; position: relative; }
 section .about_me .me { font-size: 50px; font-family: "RobotoLight"; padding: 50px 0; width: 100%; height: 100%; color: #026988; }
 section .about_me .text_about_me { font-family: "RobotoRegular"; font-size: 18px; line-height: 27px; padding: 50px 100px; }
@@ -47,3 +53,6 @@ section .about_me .text_about_me { font-family: "RobotoRegular"; font-size: 18px
 .iformation_next { font-size: 25px; font-family: "RobotoLight"; color: #000; }
 
 .rectangle { width: 100%; height: 100%; background-color: #b2eff8; z-index: -1; }
+
+.buttons_second { margin-top: 50px; width: 179px; height: 32px; background-color: #2687a4; border-radius: 5px; color: #fff; font-family: "RobotoBold"; font-size: 20px; padding: 0px 45px; line-height: 34px; cursor: pointer; border-right: 16px solid #ff9000; -webkit-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out; transition: all 0.5s ease-in-out; }
+.buttons_second:hover { background-color: #ff9000; border-right: 16px solid #2687a4; color: #000; }
