--- a/Slardarius/sass/main.sass
+++ b/Slardarius/sass/main.sass
@@ -5,11 +5,22 @@
 @import "compass/reset"
 @import "bourbon/bourbon"
 
+/* Кнопки */
+$Color_buttons_border: #ff9000
+$Color_buttons_border_buff: #2687a4
+$Color_buttons: #2687a4
+/* Текст */
+$Color_headers: #026988
+$Color_text : #000
+/* Вставки */
+$Color_items: #b2eff8
 
 body
 	font-size: 16px
 	font-family: 'RobotoRegular', sans-serif
 	line-height: 20px
+
+/* First page */
 .header
 	margin: 0 0 222px 0
 	.menu
@@ -24,8 +35,8 @@ body
 	.logo
 		font-size: 30px
 		padding: 26px 3px
-		font-family: 'RobotoBold' 
-		color: #026988
+		font-family: 'RobotoBold'
+		color: $Color_headers
 		cursor: pointer
 	nav
 		font-family: 'RobotoCondensetRegular'
@@ -43,36 +54,39 @@ body
 .why_me
 	font-family: "RobotoLight"
 	font-size: 50px
-	color: #029688
+	color: $Color_headers
 	width: 100%
 	height: 101px
 .ads
 	font-size: 25px
 	line-height: 37.5px
+	color:  $Color_text
 .next
 	font-size: 25px
 	font-family: 'RobotoLight'
-	color: #026988
+	color: $Color_headers
 	height: 82px
 	width: 100%
 	.buttons
+		margin-top: 30px
 		width: 179px
 		height: 32px
 		border-radius: 5px
-		background-color: #2687a4
+		cursor: pointer
+		background-color: $Color_buttons
 		cursor: pointer
 		padding: 0px 50px
 		color: #fff
 		font-size:  20px
 		padding:  0px 45px
 		text-transform: uppercase
-		border-right: 16px solid #ff9000
+		border-right: 16px solid $Color_buttons_border
 		@include transition(all 0.25s linear)
 		line-height: 34px
 		font-family: 'RobotoBold'
 		&:hover
 			background-color: #ff9000
-			@include transition(all 0.25s linear)
+			border-right: 16px solid $Color_buttons_border_buff
 .nout__item
 	margin: 66px 0 0 0
 	background-image: url(../img/nout.png)
@@ -81,11 +95,12 @@ body
 	height: 100vh
 	position: absolute
 
+/* Second section */
 section
 	background-image: url(../img/second_section.png)
 	background-repeat: no-repeat
 	background-position: top center
-	//background-attachment: fixed
+	background-attachment: fixed
 	width: 100%
 	height: 100vh
 	.about_me
@@ -125,3 +140,21 @@ section
 	height: 100%
 	background-color: #b2eff8
 	z-index: -1
+.buttons_second
+	margin-top: 50px
+	width: 179px
+	height:  32px
+	background-color: $Color_buttons
+	border-radius: 5px
+	color: #fff
+	font-family: 'RobotoBold'
+	font-size: 20px
+	padding: 0px 45px
+	line-height: 34px
+	cursor: pointer
+	border-right: 16px solid $Color_buttons_border
+	@include transition(all 0.5s ease-in-out)
+	&:hover
+		background-color: $Color_buttons_border
+		border-right: 16px solid $Color_buttons_border_buff
+		color: $Color_text
