--- a/Slardarius/css/main.css
+++ b/Slardarius/css/main.css
@@ -17,42 +17,73 @@ a img { border: none; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary { display: block; }
 
+* { margin: 0px; padding: 0px; }
+
 /* ╨Ъ╨╜╨╛╨┐╨║╨╕ */
 /* ╨в╨╡╨║╤Б╤В */
 /* ╨Т╤Б╤В╨░╨▓╨║╨╕ */
 body { font-size: 16px; font-family: "RobotoRegular", sans-serif; line-height: 20px; }
 
 /* First page */
-.header { margin: 0 0 222px 0; background-image: url(../img/header.png); background-position: top center; background-size: cover; background-attachment: fixed; width: 100%; height: 85vh; }
-.header .menu { width: 100%; height: 142px; }
-.header .logo { font-size: 30px; padding: 26px 3px; font-family: "RobotoBold"; color: #026988; cursor: pointer; }
-.header nav { font-family: "RobotoCondensetRegular"; }
-.header nav ul { display: flex; justify-content: space-around; }
-.header nav ul li { padding: 29px 0 0 0; text-transform: uppercase; }
-.header nav ul li a { color: #111d2c; }
-.header nav ul li:hover { list-style-image: url(../img/point.png); }
+header { width: 100%; height: 100vh; background: #689ac8 url(../img/header.png) center center/cover; background-attachment: fixed; width: 100%; height: 85vh; }
+header nav { font-family: "RobotoCondensetRegular"; }
+header nav ul { display: flex; justify-content: space-around; }
+header nav ul li { padding: 29px 0 0 0; text-transform: uppercase; }
+header nav ul li a { color: #111d2c; }
+header nav ul li:hover { list-style-image: url(../img/point.png) outside; }
+
+.logo { font-size: 30px; padding: 26px 3px; font-family: "RobotoBold"; color: #026988; cursor: pointer; }
+
+.menu { width: 100%; height: 142px; }
 
 .why_me { font-family: "RobotoLight"; font-size: 50px; color: #026988; width: 100%; height: 101px; }
 
-.ads { font-size: 25px; line-height: 37.5px; color: #000; }
+.ads { font-size: 25px; line-height: 37.5px; font-family: "RobotoRegular"; color: #000; }
 
 .next { font-size: 25px; font-family: "RobotoLight"; color: #026988; height: 82px; width: 100%; }
-.next .buttons { margin-top: 30px; width: 179px; height: 32px; border-radius: 5px; cursor: pointer; background-color: #2687a4; cursor: pointer; padding: 0px 50px; color: #fff; font-size: 20px; padding: 0px 45px; text-transform: uppercase; border-right: 16px solid #ff9000; -webkit-transition: all 0.25s linear; -moz-transition: all 0.25s linear; transition: all 0.25s linear; line-height: 34px; font-family: "RobotoBold"; }
-.next .buttons:hover { background-color: #ff9000; border-right: 16px solid #2687a4; }
 
-.nout__item { margin: 66px 0 0 0; background-image: url(../img/nout.png); background-repeat: no-repeat; width: 100%; height: 100vh; position: absolute; }
+.buttons_about_me { margin-top: 30px; }
+
+.buttons { width: 179px; height: 32px; border-radius: 5px; cursor: pointer; background-color: #2687a4; cursor: pointer; padding: 0px 50px; color: #fff; font-size: 20px; padding: 0px 45px; text-transform: uppercase; border-right: 16px solid #ff9000; -webkit-transition: all 0.25s linear; -moz-transition: all 0.25s linear; transition: all 0.25s linear; line-height: 34px; font-family: "RobotoBold"; }
+.buttons:hover { background-color: #ff9000; border-right: 16px solid #2687a4; }
+.buttons:active { background-color: #19d697; }
+
+.nout__item { background: url(../img/nout.png) no-repeat; background-size: 987px 522px; width: 987px; height: 51vh; margin-top: 100px; position: absolute; }
 
 /* Second section */
-section { background-image: url(../img/second_section.png); background-repeat: no-repeat; background-position: top center; background-attachment: fixed; width: 100%; height: 100vh; }
-section .about_me { width: 100%; height: 725px; background-color: #b2eff8; margin-top: 123px; position: relative; }
-section .about_me .me { font-size: 50px; font-family: "RobotoLight"; padding: 50px 0; width: 100%; height: 100%; color: #026988; }
-section .about_me .text_about_me { font-family: "RobotoRegular"; font-size: 18px; line-height: 27px; padding: 50px 100px; }
+#first_container { width: 100%; height: 100vh; background: #bddedd url(../img/second_section.png) top center/cover; min-height: 1080px; margin-top: 220px; position: relative; }
 
-.photo { background-image: url(../img/myphoto.png); background-position: top center; background-size: 321px 321px; background-repeat: no-repeat; width: 321px; height: 321px; border: 7px solid #b2eff8; border-radius: 25em; margin: 160px 0px 66px 170px; }
+.block_information { background: #b2eff8; width: 100%; height: 100%; margin-top: 125px; }
 
-.iformation_next { font-size: 25px; font-family: "RobotoLight"; color: #000; }
+.who_i_am { font-size: 50px; font-family: "RobotoLight"; padding: 36px 0 107px 0; color: #026988; }
 
-.rectangle { width: 100%; height: 100%; background-color: #b2eff8; z-index: -1; }
+.information_about_me { padding: 30px 100px 170px 100px; font-size: 18px; font-family: "RobotoRegular"; line-height: 27px; color: #000; }
 
-.buttons_second { margin-top: 50px; width: 179px; height: 32px; background-color: #2687a4; border-radius: 5px; color: #fff; font-family: "RobotoBold"; font-size: 20px; padding: 0px 45px; line-height: 34px; cursor: pointer; border-right: 16px solid #ff9000; -webkit-transition: all 0.5s ease-in-out; -moz-transition: all 0.5s ease-in-out; transition: all 0.5s ease-in-out; }
-.buttons_second:hover { background-color: #ff9000; border-right: 16px solid #2687a4; color: #000; }
+.my_img { width: 280px; height: 280px; background: url(../img/myphoto.png) no-repeat top center/cover; background-size: 280px 280px; margin-top: 166px; border: 5px solid #b2eff8; border-radius: 50%; }
+
+.information_addit { font-size: 25px; font-family: "RobotoLight"; padding-top: 50px; color: #000; margin-bottom: 50px; }
+.information_addit .colorfull { background: #b2eff8; }
+
+/* Third section */
+#second_container { width: 100%; height: 100vh; position: relative; }
+
+.second__header__img { background: url(../img/line.png) no-repeat; width: 853px; height: 137px; position: absolute; margin-top: 54px; top: 0%; right: 0%; }
+
+.second__title { text-transform: uppercase; font-size: 50px; font-family: "RobotoLight"; color: #026988; padding: 90px 0 150px 0; }
+
+.second__header_bg_container { background: url(../img/second_bg_container.png) no-repeat; width: 1137px; height: 189px; position: absolute; top: 25%; left: 0%; }
+
+.second__iknow { font-size: 50px; font-family: "RobotoLight"; color: #026988; }
+
+.second__whatiknow { padding-top: 41px; font-size: 25px; font-family: "RobotoRegular"; line-height: 37px; text-transform: uppercase; cursor: pointer; }
+.second__whatiknow ul > li { list-style: square outside; }
+.second__whatiknow ul > li:hover { color: #ff9000; }
+
+.second_callme { font-size: 20px; font-family: "RobotoRegular"; }
+.second_callme .imp { font-size: 30px; font-family: "RobotoLight"; color: #026988; padding-bottom: 15px; }
+
+.second__button { margin-top: 15px; padding: 0px 4px; font-size: 18px; }
+
+.second__owl-carousel { padding-top: 80px; }
+.second__owl-carousel .content { width: 150px; height: 150px; text-align: center; }
+.second__owl-carousel .content img { display: inline-block; }
