--- a/Slardarius/css/media.css
+++ b/Slardarius/css/media.css
@@ -19,6 +19,9 @@
  			font-size: 20px;
  			line-height:30px;
  		}
+ 		.next{
+ 			margin-top: 	100px;
+ 		}
  		header{
  			height: 100vh;
  			width: 100%;
@@ -29,6 +32,9 @@
  			font-size: 38px;
  			padding: 25px 0 60px 0;
  		}
+ 		.block_information{
+ 			margin-top: 250px;
+ 		}
  		.information_about_me{
  			padding: 20px 50px 100px 50px;
  			font-size: 15px;
@@ -36,14 +42,19 @@
  		.my_img{
  			width: 200px;
  			height: 200px;
- 			-webkit-align-content: ;
- 			    -ms-flex-line-pack: ;
- 			        align-content: ;kground-size: 200px 200px;
- 			margin-top: 200px;
+ 			background-size: 200px 200px;;
+ 			margin-top: 350px;
  		}
  		.information_addit{
  			font-size: 20px;
  			line-height: 30px;
+ 		}
+
+ 		#first_container{
+ 			margin: 0;
+ 		}
+ 		.second_callme{
+ 			text-align: right;
  		}
  	}
 
@@ -66,7 +77,9 @@
  			font-size: 20px;
  		}
  		
-
+ 		#first_container{
+ 			margin:0px;
+ 		}
  		.who_i_am{
  			font-size: 38px;
  			padding: 25px 0 60px 0;
@@ -79,7 +92,7 @@
  			width: 200px;
  			height: 200px;
  			background-size: 200px 200px;
- 			margin-top: 200px;
+ 			margin-top: 350px;
  		}
  		.information_addit{
  			font-size: 20px;
@@ -97,7 +110,7 @@
  			text-align: center;
  		}
  		.ads{
- 			font-size: 18px;
+ 			font-size: 15px;
  		}
  		.next{
  			margin-top: 0px;
@@ -148,15 +161,45 @@
  			font-size: 20px;
  		}
  		.second__button{
-		margin-left: 60px;
+ 			margin-left: 60px;
  		}
  		.second__header_bg_container{
  			width: 300px;
  		}
- 		.content{
- 			width: 100px;
- 			height: 100px;
+ 		.second__title{
+ 			padding-top: 70px;
  		}
+ 		.content{
+ 			width: 100%;
+ 			height: auto;
+ 		}
+
+		.second__header_bg_container{
+			top: 10%;
+		}
+		.second__iknow{
+			font-size: 30px;
+		}
+		.second__whatiknow{
+			font-size: 18px;
+			line-height: 24px;
+		}
+ 		.second__title{
+ 			padding: 75px 0 70px 0;
+ 		}
+ 		.second__owl-carousel{
+ 			padding-top: 62px;
+ 		}
+ 		.slide_prev,.slide_next{
+			top: 0%;
+			padding: 10px;
+ 		}
+ 		.fa-slider{
+		font-size: 10px
+	}
+	.bg_carousel{
+		bottom: 4%;
+	}
 
  	}
 
@@ -166,15 +209,50 @@
  			font-size: 10px;
  		}
  		.why_me{
- 			font-size: 15px;
+ 			padding: 0;
+ 			font-size: 25px;
  		}
  		.ads{
- 			font-size: 11px;
+ 			margin: 0;
+ 			font-size: 14px;
  		}
  		.next{
  			font-size: 20px;
- 			margin-top: 15px;
+ 			margin: 0px;
  		}
+ 		.buttons_about_me{
+ 			margin:0px;
+ 		}
+
+ 		.second__title{
+ 			font-size: 30px;
+ 			padding: 45px 0 45px 0
+ 		}
+ 		.second__header__img{
+			top: 0%;
+ 		}
+ 		.second__header_bg_container{
+			top: 0%;
+		}
+		.second_callme{
+			font-size: 20px;
+		}
+		.second__iknow{
+			font-size: 30px;
+		}
+		.second__whatiknow{
+			font-size: 18px;
+			line-height: 24px;
+		}
+ 		.second__owl-carousel{
+ 			padding-top: 12px;
+ 		}
+ 		.fa-slider{
+		font-size: 10px
+	}
+	#third_section{
+		margin-top: 45px;
+	}
  	}
 
 
