--- a/Slardarius/sass/main.sass
+++ b/Slardarius/sass/main.sass
@@ -2,8 +2,9 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-@import "compass/reset"
+
 @import "bourbon/bourbon"
+//@import "compass/reset"
 *
 	margin: 0px
 	padding: 0px
@@ -95,11 +96,9 @@ header
 	&:active
 		background-color: $Color_buttons_active
 .nout__item
-	background: url(../img/nout.png) no-repeat
-	background-size: 987px 522px
-	width: 987px
-	height: 51vh
-	margin-top: 100px
+	width: 100%
+	height: auto
+	margin-top: 70px
 	position: absolute
 
 /* Second section */
@@ -151,11 +150,11 @@ header
 	height: 100vh
 	position: relative
 .second__header__img
-	background: url(../img/line.png) no-repeat
-	width: 853px
-	height: 137px
+	img
+		width: 100%
+		height: auto
 	position: absolute
-	margin-top: 54px
+	margin-top: 34px
 	top: 0%
 	right: 0%
 .second__title
@@ -163,11 +162,11 @@ header
 	font-size: 50px
 	font-family: 'RobotoLight'
 	color: $Color_headers
-	padding: 90px 0 150px 0
+	padding: 75px 0 150px 0
 .second__header_bg_container
-	background: url(../img/second_bg_container.png) no-repeat
-	width: 1137px
-	height: 189px
+	img
+		width: 100%
+		height: auto
 	position: absolute
 	top: 25%
 	left: 0%
@@ -176,7 +175,7 @@ header
 	font-family: 'RobotoLight'
 	color: $Color_headers
 .second__whatiknow
-	padding-top: 41px
+	padding-top: 31px
 	font-size: 25px
 	font-family: 'RobotoRegular'
 	line-height: 37px
@@ -198,11 +197,81 @@ header
 	margin-top: 15px
 	padding: 0px 4px
 	font-size: 18px
+.bg_carousel
+	overflow: hidden
+	width: 100%
+	height: auto
+	img
+		width: 100%
+		height: auto
+	position: absolute
+	left: 0%
+.container_owl
+	position: relative
+	.slide_prev,.slide_next
+		position: absolute
+		top: 50%
+		padding: 15px
+		z-index: 1
+	.fa-slider
+		color: $Color_buttons_border
+		font-size: 100px
+	.slide_prev
+		left: 10%
+	.slide_next
+		right: 10%
 .second__owl-carousel
-	padding-top: 80px
-	.content
-		width: 150px
-		height: 150px
+	padding-top: 75px
+.content
+	text-align: center
+	z-index: -1
+	img
 		text-align: center
-		img
-			display: inline-block
+		width: 50%
+		height: auto
+		display: inline-block
+
+#third_section
+	width: 100%
+	height: 100vh
+	background: url(../img/bg_third.png) no-repeat center center / cover
+	position: relative
+.third__block_information
+	margin-top: 230px
+	font-size: 18px
+	line-height: 34px
+	font-family: 'RobotoRegular'
+	color: $Color_text
+	width: 100%
+.form
+	width: 100%
+	height: 100%
+	background: $Color_items
+	border-radius: 10px
+	padding: 100px 0px
+	text-align: center
+	position: relative
+	.img_photo
+		position: absolute
+		top: -13%
+		left: 32%
+		border: 5px solid $Color_items
+		border-radius: 50%
+		width: 120px
+		height: 120px
+		background-color: #666
+		.fa-user
+			position: absolute
+			font-size: 50px
+			color: #fff
+			top: 25%
+			left: 32%
+	input
+		margin: 20px 0px
+		width: 240px
+		height: 29px
+		border: 1px solid #000
+		border-radius: 5px
+.callme
+	margin-left: 62px
+	padding: 0px 30px
