--- a/Slardarius/css/media.css
+++ b/Slardarius/css/media.css
@@ -98,6 +98,9 @@
  			font-size: 20px;
  			line-height: 30px;
  		}
+ 		#third_section{
+ 			margin: 0px;
+ 		}
  	}
 
  	/* Extra Small Devices, Phones */
@@ -174,16 +177,16 @@
  			height: auto;
  		}
 
-		.second__header_bg_container{
-			top: 10%;
-		}
-		.second__iknow{
-			font-size: 30px;
-		}
-		.second__whatiknow{
-			font-size: 18px;
-			line-height: 24px;
-		}
+ 		.second__header_bg_container{
+ 			top: 10%;
+ 		}
+ 		.second__iknow{
+ 			font-size: 30px;
+ 		}
+ 		.second__whatiknow{
+ 			font-size: 18px;
+ 			line-height: 24px;
+ 		}
  		.second__title{
  			padding: 75px 0 70px 0;
  		}
@@ -191,16 +194,44 @@
  			padding-top: 62px;
  		}
  		.slide_prev,.slide_next{
-			top: 0%;
-			padding: 10px;
+ 			top: 0%;
+ 			padding: 10px;
  		}
  		.fa-slider{
-		font-size: 10px
-	}
-	.bg_carousel{
-		bottom: 4%;
-	}
+ 			font-size: 10px
+ 		}
+ 		.bg_carousel{
+ 			bottom: 4%;
+ 		}
 
+ 		#third_section{
+ 			margin-top: 45px;
+ 		}
+ 		.third__block_information{
+ 			margin: 55px 0px;
+ 			font-size: 17px;
+ 			line-height: 22px;
+ 		}
+ 		.form{
+ 			margin-top: 75px;
+ 			width: 100%;
+ 			height: 100%;
+ 			border-radius: 10px;
+ 			padding: 30px 0px;
+ 			text-align: center;
+ 			position: relative;
+ 		}
+ 		.form .img_photo{
+ 			top: -15%;
+ 			left: 34%;
+ 			width: 90px;
+ 			height: 90px;
+ 		}
+ 		.form .img_photo .fa-user{
+ 			font-size: 25px;
+ 			top: 38%;
+ 			left: 38%
+ 		}
  	}
 
  	/* Custom, iPhone Retina */
@@ -225,34 +256,61 @@
  		}
 
  		.second__title{
- 			font-size: 30px;
+ 			font-size: 40px;
  			padding: 45px 0 45px 0
  		}
  		.second__header__img{
-			top: 0%;
+ 			top: 0%;
  		}
  		.second__header_bg_container{
-			top: 0%;
-		}
-		.second_callme{
-			font-size: 20px;
-		}
-		.second__iknow{
-			font-size: 30px;
-		}
-		.second__whatiknow{
-			font-size: 18px;
-			line-height: 24px;
-		}
+ 			top: 0%;
+ 		}
+ 		.second_callme{
+ 			font-size: 20px;
+ 		}
+ 		.second__iknow{
+ 			font-size: 30px;
+ 		}
+ 		.second__whatiknow{
+ 			font-size: 18px;
+ 			line-height: 24px;
+ 		}
  		.second__owl-carousel{
  			padding-top: 12px;
  		}
  		.fa-slider{
-		font-size: 10px
-	}
-	#third_section{
-		margin-top: 45px;
-	}
+ 			font-size: 10px
+ 		}
+
+
+ 		#third_section{
+ 			margin-top: 45px;
+ 		}
+ 		.third__block_information{
+ 			margin: 25px 0px;
+ 			font-size: 14px;
+ 			line-height: 22px;
+ 		}
+ 		.form{
+ 			margin-top: 50px;
+ 			width: 100%;
+ 			height: 100%;
+ 			border-radius: 10px;
+ 			padding: 30px 0px;
+ 			text-align: center;
+ 			position: relative;
+ 		}
+ 		.form .img_photo{
+ 			top: -15%;
+ 			left: 34%;
+ 			width: 90px;
+ 			height: 90px;
+ 		}
+ 		.form .img_photo .fa-user{
+ 			font-size: 25px;
+ 			top: 38%;
+ 			left: 38%
+ 		}
  	}
 
 
@@ -280,5 +338,7 @@
 
  	/* Large Devices, Wide Screens */
  	@media only screen and (min-width : 1200px) {
+
+ 	}
 
  	}
