--- a/Slardarius/sass/main.sass
+++ b/Slardarius/sass/main.sass
@@ -24,6 +24,81 @@ body
 	line-height: 24px
 	margin: 0
 	padding: 0
+/* First page */
+header
+	width: 100%
+	height: 85vh
+	background: #689ac8 url(../img/header.png) center center / cover
+	background-attachment: fixed
+	nav
+		font-family: 'RobotoCondensetRegular'
+
+		ul
+			display: flex
+			justify-content: space-around
+			li
+				padding: 29px 0 0 0
+				text-transform: uppercase
+				list-style-type: none
+				a
+					color: #111d2c
+				&:hover
+					padding-bottom: 10px
+					border-bottom: 2px solid $Color_buttons_border
+.logo
+	font-size: 30px
+	padding: 26px 3px
+	font-family: 'RobotoBold'
+	color: $Color_headers
+	cursor: pointer
+.menu
+	width: 100%
+	height: 142px
+.why_me
+	font-family: "RobotoLight"
+	font-size: 50px
+	color: $Color_headers
+	width: 100%
+	height: 101px
+.ads
+	font-size: 25px
+	line-height: 37.5px
+	font-family: 'RobotoRegular'
+	color:  $Color_text
+.next
+	font-size: 25px
+	font-family: 'RobotoLight'
+	color: $Color_headers
+	height: 82px
+	width: 100%
+.buttons_about_me
+	margin-top: 30px
+.buttons
+	width: 179px
+	height: 32px
+	border-radius: 5px
+	cursor: pointer
+	background-color: $Color_buttons
+	cursor: pointer
+	padding: 0px 50px
+	color: #fff
+	font-size:  20px
+	padding:  0px 45px
+	text-transform: uppercase
+	border-right: 16px solid $Color_buttons_border
+	+transition(all 0.25s linear)
+	line-height: 34px
+	font-family: 'RobotoBold'
+	&:hover
+		background-color: #ff9000
+		border-right: 16px solid $Color_buttons_border_buff
+	&:active
+		background-color: $Color_buttons_active
+.nout__item
+	width: 100%
+	height: auto
+	margin-top: 70px
+	position: absolute
 
 /* Second section */
 #first_container
