--- a/Slardarius/sass/main.sass
+++ b/Slardarius/sass/main.sass
@@ -125,13 +125,12 @@ header
 	line-height: 27px
 	color: $Color_text
 .my_img
-	width: 280px
-	height:  280px
-	background: url(../img/myphoto.png) no-repeat top center / cover
-	background-size: 280px 280px
-	margin-top: 166px
-	border: 5px solid $Color_items
-	border-radius: 50%
+	margin-top: 210px
+	img
+		width: 45%
+		height: auto
+		border: 5px solid $Color_items
+		border-radius: 50%
 .information_addit
 	font-size: 25px
 	font-family: 'RobotoLight'
