--- a/Slardarius/css/media.css
+++ b/Slardarius/css/media.css
@@ -124,7 +124,7 @@
  			margin-top: 25px;
  		}
  		.block_information{
- 			margin: 130px 0px 50px 0px;
+ 			margin: 110px 0px 50px 0px;
  		}
  		.who_i_am{
  			font-size: 28px;
@@ -136,13 +136,13 @@
  			padding: 15px 10px;
  		}
  		.my_img{
- 			margin: 15px auto;
+ 			margin: 10px auto;
  		}
  		.information_addit{
  			text-align: center;
  			font-size: 17px;
  			line-height: 25,5px;
- 			padding-top: 5px;
+ 			padding-top: 2px;
  		}
  		.buttons_works{
  			margin: 0px auto;
@@ -237,11 +237,12 @@
  			font-size: 10px;
  		}
  		.why_me{
- 			padding: 0;
+ 			padding: 0px;
+ 			margin: 0px;
  			font-size: 25px;
  		}
  		.ads{
- 			margin: 0;
+ 			margin: 0px;
  			font-size: 14px;
  		}
  		.next{
@@ -296,7 +297,7 @@
  			padding: 30px 0px;
  			text-align: center;
  			position: relative;
- 		}
+ 		} 	
  		.form .img_photo{
  			top: -15%;
  			left: 34%;
