--- a/Slardarius/sass/main.sass
+++ b/Slardarius/sass/main.sass
@@ -125,7 +125,7 @@ header
 	line-height: 27px
 	color: $Color_text
 .my_img
-	margin-top: 210px
+	margin: 210px 0px 0px 0px
 	img
 		width: 45%
 		height: auto
@@ -241,6 +241,8 @@ header
 	font-family: 'RobotoRegular'
 	color: $Color_text
 	width: 100%
+	ol li:hover
+		color: $Color_buttons_border
 .form
 	width: 100%
 	height: 100%
