--- a/Slardarius/css/media.css
+++ b/Slardarius/css/media.css
@@ -20,7 +20,7 @@
  			line-height:30px;
  		}
  		.next{
- 			margin-top: 	100px;
+ 			margin-top: 100px;
  		}
  		header{
  			height: 100vh;
@@ -40,10 +40,11 @@
  			font-size: 15px;
  		}
  		.my_img{
- 			width: 200px;
- 			height: 200px;
- 			background-size: 200px 200px;;
  			margin-top: 350px;
+ 		}
+ 		.my_img img {
+ 			width: 40%;
+ 			height: auto;
  		}
  		.information_addit{
  			font-size: 20px;
@@ -66,7 +67,7 @@
  			width: 100%;
  		}
  		.why_me{
- 			font-size: 20px;
+ 			font-size: 30px;
  			padding-top: 20px;
  			text-align: center;
  		}
@@ -78,25 +79,65 @@
  		}
  		
  		#first_container{
- 			margin:0px;
+ 			margin: 0px;
  		}
  		.who_i_am{
  			font-size: 38px;
  			padding: 25px 0 60px 0;
  		}
  		.information_about_me{
- 			padding: 20px 50px 100px 50px;
+ 			padding: 20px 10px 70px 30px;
  			font-size: 15px;
  		}
  		.my_img{
  			margin: 20px auto;
+ 			text-align: center;
+ 		}
+ 		.my_img img {
+ 			width: 40%;
+ 			height: auto;
  		}
  		.information_addit{
+ 			text-align: center;
+ 			padding: 0;
  			font-size: 20px;
- 			line-height: 30px;
+ 			line-height: 20px;
  		}
+ 		.buttons_works{
+			margin-left: 200px;
+ 		}
+ 		
+
  		#third_section{
  			margin: 0px;
+ 		}
+ 		.third__block_information{
+ 			margin: 65px 0px;
+ 			font-size: 25px;
+ 			line-height: 37,5px;
+ 		}
+ 		.form{
+ 			margin-top: 150px;
+ 			width: 100%;
+ 			height: 100%;
+ 			border-radius: 10px;
+ 			padding: 30px 0px;
+ 			text-align: center;
+ 			position: relative;
+ 		}
+ 		.form .img_photo{
+ 			top: -25%;
+ 			left: 40%;
+ 			width: 120px;
+ 			height: 120px;
+ 		}
+ 		.form .img_photo .fa-user{
+ 			font-size: 45px;
+ 			top: 28%;
+ 			left: 35%
+ 		}
+ 		.callme{
+ 			margin-left: 165px;
  		}
  	}
 
@@ -134,6 +175,10 @@
  		}
  		.my_img{
  			margin: 10px auto;
+ 		}
+ 		.my_img img {
+ 			width: 10%;
+ 			height: auto;
  		}
  		.information_addit{
  			text-align: center;
@@ -294,7 +339,7 @@
  			padding: 30px 0px;
  			text-align: center;
  			position: relative;
- 		} 	
+ 		}
  		.form .img_photo{
  			top: -15%;
  			left: 34%;
