--- a/Slardarius/sass/main.sass
+++ b/Slardarius/sass/main.sass
@@ -28,6 +28,7 @@ body
 header
 	width: 100%
 	height: 85vh
+	min-height: 700px
 	background: #689ac8 url(../img/header.png) center center / cover
 	background-attachment: fixed
 	nav
@@ -162,6 +163,7 @@ header
 	color: $Color_headers
 	padding: 75px 0 150px 0
 .second__header_bg_container
+	width: 20%
 	img
 		width: 100%
 		height: auto
