--- a/templ/css/media.css
+++ b/templ/css/media.css
@@ -67,13 +67,13 @@
 
 	.header_title{
 		padding: 10px 0px;
-		font-size: 15px;
+		font-size: 30px;
 	}
 	.list{
-		font-size: 19px;
+		font-size: 16px;
 	}
 	.next_slide_buttons{
-		margin-left: 29%;
+		margin: 20% auto;
 	}
 	.nout_item{
 		margin-top: 105%;
@@ -96,7 +96,7 @@
 		font-size: 13px;
 	}
 	.next_slide_buttons{
-		margin-left: 19%;
+		margin: 20% auto;
 	}
 	.nout_item{
 		margin-top: 25%;
