--- a/templ/sass/main.sass
+++ b/templ/sass/main.sass
@@ -37,6 +37,7 @@ body
 	font-size: em(20px)
 	color: #fff
 	padding: 0px 48px
+	z-index: 1
 	cursor: pointer
 	+transition(all .5s ease)
 	&:hover
@@ -51,7 +52,6 @@ header
 	height: 100vh
 	min-height: 700px
 	position: relative
-	z-index: -1
 .top_line
 	padding: 25px 0px
 	.logo
@@ -93,6 +93,6 @@ header
 	left: 0%
 	width: 100%
 	height: 12vh
-	background: #2e2e2e
+	background: red
 	position: absolute
 	bottom: 0%
