--- a/templ/css/media.css
+++ b/templ/css/media.css
@@ -9,6 +9,13 @@
 	.nout_item img{
 		width: 100%;
 	}
+	/* TODO SECOND SECTION */
+	.Inf_addit{
+		text-align: center;
+	}
+ 	.next_slide_buttons_work{
+ 		margin: 5% auto;
+ 	}
 }
 
 /* Medium Devices, Desktops */
@@ -26,6 +33,24 @@
 	}
 	.nout_item{
 		margin-top: 25%;
+	}
+	/*TODO SECOND SECTION */
+	.Second_title{
+		text-align: center;
+	}
+	.Text_about_me{
+		text-align: space-around;
+	}
+	.My_img img {
+		width: 60%;
+		margin: 20% auto;
+	}
+	.Inf_addit{
+		margin-top: 30%;
+		text-align: left;
+	}
+	.next_slide_buttons_work{
+		margin: 5% 0px;
 	}
 }
 
@@ -60,11 +85,26 @@
 		height: 20vh;
 		background: #000;
 	}
+	/*TODO: SECOND SECTION */
+	.wrapp{
+		padding: 20px 0px;
+		width: 90%;
+		height: 45vh;
+		margin: 0px auto;
+	}
+	.Text_about_me{
+		margin-top: 5%;
+		font-size: 16px;
+	}
+	.My_img img {
+		width: 60%;
+		margin: 20% auto;
+	}
 }
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
-
+	/* TODO HEADER */
 	.header_title{
 		padding: 40px 0px;
 		font-size: 40px;
@@ -79,6 +119,7 @@
 
 /* Custom, iPhone Retina */
 @media only screen and (max-width : 320px) {
+	/* TODO HEADER */
 	.logo p{
 		font-size: 15px;
 	}
