--- a/templ/sass/main.sass
+++ b/templ/sass/main.sass
@@ -93,6 +93,45 @@ header
 	left: 0%
 	width: 100%
 	height: 12vh
-	background: red
+	background: blue
 	position: absolute
 	bottom: 0%
+
+/* Second section */
+#Second_section
+	width: 100%
+	height: 100vh
+	background: url(../img/second_section.png) no-repeat top center / cover
+	position: relative
+	padding: 130px 0px
+.wrapp
+	width: 100%
+	height: 50vh
+	background: $Color_items
+	padding: 10px 30px 30px 20px
+.Second_title
+	font-size: em(50px)
+	color: $Color_headers
+	font-family: 'RobotoLight'
+.Text_about_me
+	margin-top: 10%
+	width: 100%
+	font-size: em(18px)
+	color: $Color_text
+	font-family: 'RobotoRegular'
+.My_img
+	text-align: center
+	img
+		width: 80%
+		height: auto
+		border: 5px solid $Color_items
+		border-radius: 50%
+.Inf_addit
+	margin-top: 10%
+	font-size: 25px
+	font-family: 'RobotoLight'
+	color: $Color_text
+	.Colorful
+		background: $Color_items
+.next_slide_buttons_work
+	margin-top: 5%
