--- a/templ/css/media.css
+++ b/templ/css/media.css
@@ -50,7 +50,7 @@
 		text-align: left;
 	}
 	.next_slide_buttons_work{
-		margin: 5% 0px;
+		margin: 5% auto;
 	}
 }
 
@@ -62,28 +62,18 @@
 	}
 	.header_title{
 		text-align: center;
-		font-size: 20px;
-		padding: 25px 0px;
+		font-size: 40px;
+		padding: 40px 0px;
 	}
 	.list{
-		font-size: 15px;
+		font-size: 23px;
 	}
 	.next_slide{
 		margin-top: 20px;
 		text-align: center;
 	}
 	.next_slide_buttons{
-		margin-left: 38%;
-	}
-	.nout_item{
-		margin-top: 10%;
-	}
-	.nout_item img {
-		width: 80%;
-	}
-	.bg_white{
-		height: 20vh;
-		background: #000;
+		margin: 30% auto; q
 	}
 	/*TODO: SECOND SECTION */
 	.wrapp{
@@ -100,6 +90,9 @@
 		width: 60%;
 		margin: 20% auto;
 	}
+	.Inf_addit{
+		font-size: 21px;
+	}
 }
 
 /* Extra Small Devices, Phones */
@@ -114,6 +107,23 @@
 	}
 	.next_slide_buttons{
 		margin: 10% auto;
+	}
+	/* TODO: SECOND CONTAINER */
+	#Second_section{
+		padding: 80px 0px;
+	}
+	.Second_title{
+		font-size: 35px;
+	}
+	.Text_about_me{
+		margin-top: 5%;
+		font-size: 15px;
+	}
+	.Inf_addit{
+		font-size: 18px;
+	}
+	.My_img img{
+		width: 90%;
 	}
 }
 
@@ -132,6 +142,26 @@
 	}
 	.next_slide_buttons{
 		margin: 20% auto;
+	}
+	/* TODO: SECOND CONTAINER */
+	#Second_section{
+		padding: 50px 0px;
+	}
+	.Second_title{
+		font-size: 25px;
+	}
+	.Text_about_me{
+		margin-top: 5%;
+		font-size: 14px;
+	}
+	.Inf_addit{
+		font-size: 14px;
+	}
+	.My_img img{
+		width: 90%;
+	}
+	.next_slide_buttons_work{
+		margin: 10% auto;
 	}
 }
 
@@ -161,4 +191,4 @@
 /* Large Devices, Wide Screens */
 @media only screen and (min-width : 1200px) {
 
-}
+}}}
