--- a/templ/css/media.css
+++ b/templ/css/media.css
@@ -16,6 +16,10 @@
  	.next_slide_buttons_work{
  		margin: 5% auto;
  	}
+	/* TODO: FOURTH SECTION */	
+	.Fourth_list{
+		font-size: 24px;
+	}
 }
 
 /* Medium Devices, Desktops */
@@ -63,6 +67,10 @@
 	}
 	.Inf_addit_link #_link_text{
 		text-align: center;
+	}
+	/* TODO: FOURTH SECTION */
+	.Fourth_list{
+		font-size: 16px;
 	}
 }
 
@@ -116,6 +124,15 @@
 		margin: 0% 0px;
 		height: 23vh;
 	}
+	/*TODO: FOURTH SECTION */
+	.Fourth_list{
+		margin-top: 10%;
+		font-size: 25px;
+	}
+	.callback{
+		margin-top: 10%;
+		padding: 75px 30px;
+	}
 }
 
 /* Extra Small Devices, Phones */
@@ -157,6 +174,13 @@
 	}
 	.Img_slideP img{
 		width: 90%;
+	}
+	/*TODO: FOURTH CONTAINER */
+	.Fourth_title{
+		font-size: 30px;
+	}
+	.Fourth_list{
+		font-size: 18px;
 	}
 }
 
