--- a/templ/sass/main.sass
+++ b/templ/sass/main.sass
@@ -25,6 +25,7 @@ body
 	overflow-x: hidden
 	min-width: 320px
 	overflow-x: hidden
+	cursor: pointer
 
 .button
 	width: 180px
@@ -192,11 +193,62 @@ header
 	height: 30vh
 	background-color: $Color_headers
 .Img_slideP
-	margin: 15% 0%
 	text-align: center
-	font-size: 20px
-	font-family: 'RobotoLight'
-	color: $Color_text
+	p
+		padding: 10px
 	img
-		width: 70%
-		height: auto
+		border: 1px solid $Color_items
+
+/* FFOURTH SECTION */
+#Fourth_section
+	width: 100%
+	height: 100vh
+	position: relative
+.Img_title_fourth
+	position: absolute
+	top: 0%
+	left: 0%
+.Fourth_title
+	font-size: em(50px)
+	text-transform: uppercase
+	font-family: 'Robotolight'
+	padding: 20px
+	color: $Color_headers
+.Fourth_wrapp_content
+	margin-top: 1%
+	background: url(../img/bg_third.png) no-repeat center center / cover
+	width: 100%
+	height: 85vh
+.Fourth_list
+	margin-top: 50%
+	font-size: em(25px)
+	font-family: 'RobotoRegular'
+	color: $Color_text
+.callback
+	text-align: center
+	margin-top: 30%
+	padding: 150px 60px 70px 60px
+	position: relative
+	background: $Color_items
+	border-radius: 5px
+	form > input
+		margin-bottom: 20px
+		border-radius: 5px
+		width: 230px
+.button_call_me
+	margin: 5% auto
+	padding: 0px 30px
+.social_menu
+	background: $Color_buttons_border
+	width: 60%
+	border-radius: 5px
+	margin: 15% auto
+	a .fa
+		font-size: em(25px)
+		color: $Color_text
+		&:hover
+			color: $Color_buttons_active
+	ul
+		padding: 5px
+		display: flex
+		justify-content: space-around
