--- a/templ/sass/main.sass
+++ b/templ/sass/main.sass
@@ -26,6 +26,10 @@ body
 	min-width: 320px
 	overflow-x: hidden
 	cursor: pointer
+.active_list li:hover
+	color: $Color_buttons_border
+	& a
+		color: $Color_buttons_active
 
 .button
 	width: 180px
@@ -94,7 +98,7 @@ header
 	left: 0%
 	width: 100%
 	height: 12vh
-	background: blue
+	background: #fff
 	position: absolute
 	bottom: 0%
 
@@ -218,7 +222,7 @@ header
 	margin-top: 1%
 	background: url(../img/bg_third.png) no-repeat center center / cover
 	width: 100%
-	height: 85vh
+	height: 86vh
 .Fourth_list
 	margin-top: 50%
 	font-size: em(25px)
@@ -231,10 +235,20 @@ header
 	position: relative
 	background: $Color_items
 	border-radius: 5px
+	+transition(all 0.5s ease)
 	form > input
-		margin-bottom: 20px
+		margin: 5%
+		border: 5px solid trasparent
 		border-radius: 5px
-		width: 230px
+		width: 250px
+		height: 35px
+form input[type = 'text']:hover, input[type ='tel']:hover, input[type='email']:hover
+	width: 250px
+	height: 35px
+	+transition(all 0.5s ease)
+	border: 0px solid transparent
+	border-left: 10px solid $Color_buttons_active
+	font-family: 'RobotoLight'
 .button_call_me
 	margin: 5% auto
 	padding: 0px 30px
@@ -252,3 +266,19 @@ header
 		padding: 5px
 		display: flex
 		justify-content: space-around
+footer
+	background-color: $Color_buttons_border
+	ul
+		display: flex
+		justify-content: space-around
+		padding: 20px 0px
+		a
+			color: $Color_text
+			text-transform: uppercase
+			font-family: 'RobotoRegular'
+.text_title
+	font-size: 25px
+	padding: 12px 0px
+	text-align: center
+	font-family: 'RobotoBold'
+	color: $Color_text
