--- a/DeltaDigital/css/main.css
+++ b/DeltaDigital/css/main.css
@@ -135,3 +135,24 @@ header {
         transition: all 0.5s linear; }
       .content__items__button:active {
         background-color: #f51856; }
+
+footer {
+  background-color: #dad9d9; }
+
+.footer {
+  text-decoration: none;
+  list-style: none;
+  text-transform: uppercase;
+  font-family: 'segoe-ex';
+  cursor: pointer;
+  font-size: 0.8125em; }
+  .footer__title {
+    font-size: 1.125em;
+    font-family: 'segoeBold-ex';
+    margin: 5% 0px; }
+  .footer a {
+    color: #000; }
+    .footer a:hover {
+      color: #f17f42; }
+    .footer a:active {
+      color: #f51856; }
