--- a/DeltaDigital/css/media.css
+++ b/DeltaDigital/css/media.css
@@ -15,6 +15,10 @@
 
 /* Extra Small Devices, Phones */
 @media only screen and (max-width : 480px) {
+	.top-menu__logo img{
+		width: 50%;
+		vertical-align: 1%; !important
+	}
 	.content__title h1{
 		font-size: 40px; !important
 	}
